deployments/base/configs/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-namespaces
  annotations:
    policies.kyverno.io/description: "Ensure all resources are deployed in namespaces"
    policies.kyverno.io/subject: "Namespace"
    policies.kyverno.io/audit-version: "v1.22.3"
    policies.kyverno.io/enforce-version: "v1.22.3"
spec:
  validationFailureAction: Enforce
  rules:
    - name: enforce-prod-namespace
      match:
        resources:
          kinds:
            - "*"
          namespaces:
            - "!prod"
            - "!dev"
            - "!kube-system"
            - "!kyverno"
            - "!istio-system"
            - "!monitoring"
      exclude:
        resources:
          annotations:
            helm.sh/chart: "*"
      validate:
        message: "All resources must be in the [prod, dev] namespaces"
        pattern:
          metadata:
            namespace:
              anyOf:
                - "prod"
                - "dev"
